--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Controller and Services -->
     <script src = "frontend/router.js"></script>
     <script src = "frontend/apiconnector.js"></script>
+    <script src = "frontend/view/js/menu.js"></script>
+    
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
@@ -23,7 +25,11 @@
     <!-- Contact -->
     <script src="frontend/module/contact/controller/controller_contact.js"></script>
     <script src="frontend/module/contact/services/service_contact.js"></script>
-    
+
+    <!-- Home -->
+    <script src="frontend/module/home/controller/controller_home.js"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
 </head>
 <body>
     <div ng-include = "'frontend/view/inc/header.html'"></div>
