--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <link href="frontend/view/inc/assets/css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="frontend/view/css/car_form.css">
     <link rel="stylesheet" href="frontend/view/css/style.css">
-    <link rel="stylesheet" href="frontend/view/css/error.css">
+    <link rel="stylesheet" href="frontend/view/css/modal.css">
+    <!-- <link rel="stylesheet" href="frontend/view/css/error.css"> -->
+    <!-- <link rel="stylesheet" href="frontend/view/css/shop.css"> -->
+    <!-- <link rel="stylesheet" href="frontend/view/css/details.css"> -->
+    <!-- <link rel="stylesheet" href="frontend/view/css/login.css"> -->
 
 
     <!-- Contact -->
@@ -29,6 +33,9 @@
     <!-- Home -->
     <script src="frontend/module/home/controller/controller_home.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
+    <!-- Search -->
+    <script src="frontend/module/search/services/service_search.js"></script>
 
 </head>
 <body>
