Modul_Shop->(Details,Related,Return_Shop),Services->(GMaps,Swiper)

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
     <script src="frontend/module/search/services/service_search.js"></script>
 
     <!-- Shop -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCV58mu2pm4WgDALp91XnIighQ0E3KfSJM"></script>
     <script src="frontend/module/shop/controller/controller_shop.js"></script>
     <script src="frontend/module/shop/controller/controller_details.js"></script>
     <script src="frontend/module/shop/services/service_shop.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCV58mu2pm4WgDALp91XnIighQ0E3KfSJM"></script>
+    <script src="frontend/module/shop/services/service_gmaps.js"></script>
+    <script src="frontend/module/shop/services/service_swiper.js"></script>
 
 </head>
 <body>
