Modul_Login->(Login,Register),Services->(Validate,LocalStorage,Submit)

--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
     <script src = "frontend/apiconnector.js"></script>
     <script src = "frontend/view/js/menu.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/f85529e5a8.js" crossorigin="anonymous"></script>
+    <script src = "https://npmcdn.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
     
 
     <!-- CSS -->
     <link href="frontend/view/inc/assets/css/main.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="frontend/view/css/car_form.css">
     <link rel="stylesheet" href="frontend/view/css/style.css">
     <link rel="stylesheet" href="frontend/view/css/modal.css">
-    <!-- <link rel="stylesheet" href="frontend/view/css/error.css"> -->
-    <!-- <link rel="stylesheet" href="frontend/view/css/shop.css"> -->
-    <!-- <link rel="stylesheet" href="frontend/view/css/details.css"> -->
-    <!-- <link rel="stylesheet" href="frontend/view/css/login.css"> -->
+    <link rel = "stylesheet" href = "https://npmcdn.com/angular-toastr/dist/angular-toastr.css" />
 
     <!-- CSS / Route -->
     <script src="frontend/view/js/route-style.js"></script>
@@ -48,6 +46,13 @@
     <script src="frontend/module/shop/services/service_shop.js"></script>
     <script src="frontend/module/shop/services/service_gmaps.js"></script>
     <script src="frontend/module/shop/services/service_swiper.js"></script>
+
+    <!-- Login -->
+    <script src="frontend/module/login/controller/controller_login.js"></script>
+    <script src="frontend/module/login/controller/controller_verfiy.js"></script>
+    <script src="frontend/module/login/services/service_login.js"></script>
+    <script src="frontend/module/login/services/service_validate.js"></script>
+    <script src="frontend/module/login/services/services_localStorage.js"></script>
 
 </head>
 <body>
