Modul_Login->(Verify),Services->(Verify)

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script src="frontend/module/login/services/service_login.js"></script>
     <script src="frontend/module/login/services/service_validate.js"></script>
     <script src="frontend/module/login/services/services_localStorage.js"></script>
+    <script src="frontend/module/login/services/service_verify.js"></script>
 
 </head>
 <body>
