Modul_Login->(Ask_email,Recover),Services->(Recover)

--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
     <!-- Login -->
     <script src="frontend/module/login/controller/controller_login.js"></script>
     <script src="frontend/module/login/controller/controller_verfiy.js"></script>
+    <script src="frontend/module/login/controller/controller_recover.js"></script>
     <script src="frontend/module/login/services/service_login.js"></script>
     <script src="frontend/module/login/services/service_validate.js"></script>
     <script src="frontend/module/login/services/services_localStorage.js"></script>
     <script src="frontend/module/login/services/service_verify.js"></script>
+    <script src="frontend/module/login/services/service_recover.js"></script>
 
 </head>
 <body>
