Modul_Login->(Social_Login),Services->(Service_social_login,Service_Auth0),Backend->(Auth0.ini,Auth0.getCredentials)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/f85529e5a8.js" crossorigin="anonymous"></script>
     <script src = "https://npmcdn.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="https://cdn.auth0.com/js/auth0/9.2.2/auth0.min.js"></script>
     
 
     <!-- CSS -->
@@ -56,6 +57,8 @@
     <script src="frontend/module/login/services/service_validate.js"></script>
     <script src="frontend/module/login/services/service_verify.js"></script>
     <script src="frontend/module/login/services/service_recover.js"></script>
+    <script src="frontend/module/login/services/service_social_login.js"></script>
+    <script src="frontend/module/login/services/service_auth0.js"></script>
 
 </head>
 <body>
