Services->(Modal),Components->(Modal)

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <script src = "frontend/router.js"></script>
     <script src = "frontend/apiconnector.js"></script>
     <script src="frontend/services/service_middleware.js"></script>
-    <script src="frontend/services/services_localStorage.js"></script>
+    <script src="frontend/services/service_localStorage.js"></script>
+    <script src="frontend/services/service_modal.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/f85529e5a8.js" crossorigin="anonymous"></script>
     <script src = "https://npmcdn.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="https://cdn.auth0.com/js/auth0/9.2.2/auth0.min.js"></script>
     
+    <!-- Components -->
+    <script src="frontend/components/modal/js/directive_modal.js"></script>
 
     <!-- CSS -->
     <link href="frontend/view/inc/assets/css/main.css" rel="stylesheet" />
