--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="frontend/services/service_middleware.js"></script>
     <script src="frontend/services/service_localStorage.js"></script>
     <script src="frontend/services/service_modal.js"></script>
+    <script src="frontend/services/service_activity.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/f85529e5a8.js" crossorigin="anonymous"></script>
     <script src = "https://npmcdn.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
@@ -66,7 +67,7 @@
 </head>
 <body>
     <div ng-include = "'frontend/view/inc/header.html'"></div>
-    <div ng-view autoscroll = "true"></div>
+    <div ng-view autoscroll = "true" ng-click="refresh_activity()"></div>
     <div ng-include = "'frontend/view/inc/footer.html'"></div>
 </body>
 </html>
